header e nav end

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <br>
-        <div><img src="img/Logo.png" alt=""> <h1>Toobolist</h1></div>
+        <div class="header-logo"><img src="img/Logo.png" alt="" style="float: left;"></div>
+        <div class="header-title"><h1>Toobolist</h1></div>
     </header>
     <br>
     <nav>
