--- a/index.html
+++ b/index.html
@@ -16,18 +16,27 @@
         <button class="button" id="button-task">Add Task</button>
         <button class="button" id="button-section">Add Section</button>
     </nav>
-
+    <br>
     <main>
         <section>
-            
+            <h3>&#11167; New Task</h3>
+            <p><span class="true">&#10003;</span> Quarterly Newsletter <button class="main-button" id="editorial">Editorial</button></p>
         </section>
 
         <section>
-
+            <h3>&#11167; Today</h3>
+            <p><span class="true">&#10003;</span> Recruiting blog post <button class="main-button" id="editorial">Editorial</button></p>
+            <p><span class="true">&#10003;</span> Mobile app launch <button class="main-button" id="goals">Q1 Goals</button></p>
+            <p><span class="false">&#9747;</span> Interview John H. <button class="main-button" id="recruit">Recruiting</button></p>
+            <p><span class="true">&#10003;</span> Summit update to mobile storefronts <button class="main-button" id="mobile">Mobile</button></p>
         </section>
 
         <section>
-
+            <h3>&#11167; Upcoming</h3>
+            <p><span class="false">&#9747;</span> Schedule meeting with Alex</p>
+            <p><span class="true">&#10003;</span> Homepage refresh <button class="main-button" id="web">Website</button></p>
+            <p><span class="true">&#10003;</span> Onboard new Sales team members <button class="main-button" id="sales">Sales</button></p>
+            <p><span class="true">&#10003;</span> Review editorial calendar <button class="main-button" id="editorial">Editorial</button></p>
         </section>
     </main>
 
